[package]
name = "cambridgescript"
version = "0.3.0"
authors = ["Daniel Gu <bobthebuilder10492@gmail.com>"]
edition = "2021"
description = "Interpreter for Cambridge IGCSE Computer Science pseudocode"
repository = "https://github.com/n0Oo0Oo0b/cambridgescript-rs"
license = "MIT"
categories = ["compilers"]

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.1.0"
